--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
         "sourceMap": true,
         "outDir": "dist",
         "importHelpers": true,
-        "strict": true,
+        "strict": false,
         "noImplicitAny": false,
         "strictNullChecks": false,
         "noImplicitThis": true,
         "alwaysStrict": true,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "noUnusedParameters": false,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
